# novanet

./: .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile.agent  Dockerfile.build  Dockerfile.dataplane  Dockerfile.operator  Makefile  README.md  go.mod  go.sum  mkdocs.yml
.github/workflows/: ci.yml  ct.yml  nightly-security.yml  pages.yml  release.yml
api/v1/: ebpf_services.pb.go  ebpf_services.proto  ebpf_services_grpc.pb.go  ipam.pb.go  ipam.proto  ipam_grpc.pb.go  novanet.pb.go  novanet.proto  novanet_grpc.pb.go
api/v1alpha1/: groupversion_info.go  ipallocation_types.go  ippool_types.go  novanetcluster_types.go  zz_generated.deepcopy.go
cmd/novanet-agent/: main.go  main_test.go
cmd/novanet-cni/: main.go
cmd/novanet-operator/: main.go
cmd/novanetctl/: connect.go  egress.go  flows.go  helpers.go  identity.go  main.go  main_test.go  metrics.go  policy.go  routing.go  services.go  status.go  tunnels.go
config/crd/: novanet.io_novanetclusters.yaml
config/samples/: novanetcluster-sample.yaml
config/webhook/: manifests.yaml
dataplane/.config/: nextest.toml
dataplane/novanet-common/: Cargo.toml
dataplane/novanet-dataplane/: Cargo.toml
dataplane/novanet-dataplane/src/: flows.rs  loader.rs  main.rs  maps.rs  server.rs
deploy/argocd/: application.yaml
deploy/scripts/: prepare-k3s-node.sh
docs/: _config.yml  api-reference.md  architecture.md  cli-reference.md  configuration.md  development.md  index.md  installation.md  mesh-interception.md  novaroute-integration.md  troubleshooting.md
docs/plans/: 2026-02-25-novanet-6-month-implementation.md  (+4 more)
(+140 files in other folders)
