[package]
name = "novanet-dataplane"
version = "0.1.0"
edition = "2021"
description = "NovaNet userspace dataplane daemon — loads eBPF programs and exposes gRPC API"

[dependencies]
novanet-common = { path = "../novanet-common", features = ["userspace"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13"
aya-log = "0.2"

[build-dependencies]
tonic-build = "0.12"
